# chia_puzzles

./: .gitignore  Cargo.toml  README.md  build.rs  generate_chialisp_constants.py  puzzle_hashes.json  pyproject.toml
.github/workflows/: build-wheels.yml  cargo-tests.yml  python-tests.yml
chia_puzzles/: manage_clvm.py
chia_puzzles_py/: programs.py
chia_puzzles_py/tests/: test_import.py
proc-macro/: Cargo.toml
proc-macro/src/: include_puzzles.rs  lib.rs
puzzles/: curry_size_opt.clib  settlement_payments_v1.clsp
puzzles/cat_puzzles/: cat_v1.clsp
puzzles/consensus_puzzles/: rom_bootstrap_generator.clsp
puzzles/mips_puzzles/member_puzzles/: singleton_member_puzzle_assert.clsp  singleton_member_puzzle_assert.clsp.hex
puzzles/mips_puzzles/restriction_puzzles/wrappers/: prevent_condition_opcode.clsp  prevent_condition_opcode.clsp.hex  prevent_create_coin_announcement.clsp  prevent_create_coin_announcement.clsp.hex  prevent_create_puzzle_announcement.clsp  prevent_create_puzzle_announcement.clsp.hex  prevent_receive_message.clsp  prevent_receive_message.clsp.hex  prevent_send_message.clsp  prevent_send_message.clsp.hex  recovery.clsp  recovery.clsp.hex
puzzles/vault_puzzles/restriction_puzzles/wrappers/: recovery.clsp
src/: lib.rs  programs.rs  tests.rs  tree_hash.rs
