[tool.poetry]
name = "chia_puzzles_py"
version = "0.20.3"
authors = ["Matt Howard <matt@chia.net>"]
description = "A collection of the currently deployed ChiaLisp puzzles."
readme = "README.md"
packages=[{include = "chia_puzzles_py"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
clvm-rs = "^0.2.3"
chialisp = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
