[project]
name = "chia_puzzles_py"
version = "0.20.3"
authors = [
    {name="Matt Howard", email="matt@chia.net"}
]
description = "A collection of the currently deployed ChiaLisp puzzles."
readme = "README.md"

[tool.poetry]
packages=[{include = "chia_puzzles_py"}]

[project.dependencies]
python = "^3.10"
clvm-tools-rs = ">=0.1.45,<0.5.0"
pytest = { version = ">=8.3.3", optional = true }
clvm-rs = ">=0.2.3,<0.18.0"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
