[package]
name = "chia-puzzles-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macro for loading the chia-puzzles files."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_puzzles"
repository = "https://github.com/Chia-Network/chia_puzzles"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
thiserror = "2.0.3"
indoc = "2.0.5"
serde = "1.0.215"
serde_json = "1.0.132"
